# phosphor

./: .gitignore  AGENTS.md  APPLET-PLAN.md  BENCH.md  Cargo.toml  FEEDBACK.md  FUTURE.md  HANDOFF.md  NEXUS-FORM-STATION.md  OtherScopeIdeas.md  PARITY.md  PHOSPHOR-STATION.html  PromptV4KeepPlanOffIt.md  README.md  SPIKES.md  phosphor-development-best-practices.md  phosphor.py  phosphor_applet_feed.py  phosphor_audio.py  phosphor_codebase_audit.md  phosphor_compose.py  phosphor_core.py  phosphor_kit.py  phosphor_kit_editor.py  phosphor_mpris.py  phosphor_player.py  phosphor_precompute.py  phosphor_recorder.py  phosphor_render_cairo.py  phosphor_render_gl.py  phosphor_settings.py  phosphor_signal.py  phosphor_studio.py  phosphor_ui_style.py  rust-toolchain.toml
.claude/skills/mmx-playbook/: SKILL.md
applet/: README.md  install.sh
applet/phosphor-scope@phosphor/: applet.js  metadata.json  settings-schema.json  stylesheet.css
archive/: ARC-BRIEF.md  README.md  spike_shell.rs
core/: Cargo.toml
core/src/: lib.rs
crates/phosphor-app/: Cargo.toml
crates/phosphor-app/examples/: spike_shell.rs
crates/phosphor-app/src/: agent.rs  bench.rs  chrome.rs  compose.rs  control.rs  exports.rs  feed.rs  keyboard.rs  kit.rs  main.rs  mpris.rs  mpris_client.rs  notify.rs  player.rs  protocol.rs  raster_worker.rs  render.rs  shell.rs  signals.rs  theme.rs
crates/phosphor-audio/: Cargo.toml
crates/phosphor-audio/examples/: audible_soak.rs  capture_probe.rs  mix_probe.rs  pause_resume_probe.rs  playback_probe.rs  pw_smoke.rs  symphonia_interleave_probe.rs  thread_probe.rs  vacuum_ctl.rs
crates/phosphor-audio/src/: engine.rs  events.rs  lib.rs  metadata.rs  mirror.rs  playback.rs  ring.rs  targets.rs
crates/phosphor-beam/: Cargo.toml
crates/phosphor-beam/src/: lib.rs
crates/phosphor-dsp/: Cargo.toml
crates/phosphor-dsp/src/: camera.rs  compose.rs  fft.rs  kit.rs  lib.rs  oversample.rs
crates/phosphor-dsp/src/modes/: helix.rs  mod.rs  spectrum.rs  takens.rs  waveform.rs  xy.rs
crates/phosphor-dsp/tests/: golden_replay.rs  properties.rs
crates/phosphor-proto/: Cargo.toml
crates/phosphor-proto/src/: fsio.rs  lib.rs  phos.rs  phoskit.rs  settings.rs
crates/phosphor-render-cpu/: Cargo.toml
crates/phosphor-render-cpu/src/: lib.rs  raster.rs
crates/phosphor-render-cpu/tests/: timing.rs
crates/phosphor-render-gpu/: Cargo.toml
crates/phosphor-render-gpu/src/: lib.rs  shaders.wgsl
crates/phosphor-render-gpu/tests/: cross_snapshot.rs  live_viewport.rs
crates/phosphor-studio/: Cargo.toml
crates/phosphor-studio/src/: lib.rs
docs/: AGENTS.md  ASKS.md  MANUAL.md  phoskit.schema.json  phosphor-studio.1.scd  phosphor.1.scd
docs/dev/: ACTION-LENS-PLAN.md  ARC-BRIEF.md  BEST-PRACTICES.md  BLOOM-SPEC.md  BUGLOG.md  DECAY-DT-SPEC.md  DOWNMIX-DESIGN.md  FUTURE.md  GOLDEN.md  PARITY.md  PHOSPHOR-STATION.html  RECURRENCE-BLOOM-PLAN.md  SHELL-DECOMPOSITION-PLAN.md  SPSC-RING-DESIGN.md  V4PLAN.md
kits/: haunt.phoskit  heartbeat.phoskit  orbit.phoskit
packaging/: build-deb.sh  build-rpm.sh  phosphor.desktop
scenes/: breathing-dot.scene.json  stress-knot.scene.json  turtle.scene.json
tests/: capture_golden.py  golden_lib.py  studio_golden.json  test_golden_replay.py  test_native_parity.py  test_studio_scenes.py
tests/bench/: bench_probe.py  run_bench.py  signals.py
tests/bench/results/: v3-baseline.json
tests/golden/: README.md  manifest.json
tests/golden/cases/: helix__burst__48000.json  helix__burst__96000.json  helix__sine__48000.json  helix__sine__96000.json  helix__sweep__48000.json  helix__sweep__96000.json  kit-chain__spectrum__sweep__48000.json  kit-chain__xy__sweep__48000.json  kit-chandelay__spectrum__sweep__48000.json  kit-chandelay__xy__sweep__48000.json  kit-matrix__spectrum__sweep__48000.json  kit-matrix__xy__sweep__48000.json  kit-midside__spectrum__sweep__48000.json  kit-midside__xy__sweep__48000.json  kit-ringmod__spectrum__sweep__48000.json  kit-ringmod__xy__sweep__48000.json  kit-rotate__spectrum__sweep__48000.json  kit-rotate__xy__sweep__48000.json  kit-wobble__spectrum__sweep__48000.json  kit-wobble__xy__sweep__48000.json  ring__burst__48000.json  ring__burst__96000.json  ring__sweep__48000.json  ring__sweep__96000.json  spectrum__burst__48000.json  spectrum__burst__96000.json  spectrum__chord__48000.json  spectrum__chord__96000.json  spectrum__sine__48000.json  spectrum__sine__96000.json  spectrum__sweep__48000.json  spectrum__sweep__96000.json  spectrum_radial__burst__48000.json  spectrum_radial__burst__96000.json  spectrum_radial__chord__48000.json  spectrum_radial__chord__96000.json  spectrum_radial__sine__48000.json  spectrum_radial__sine__96000.json  spectrum_radial__sweep__48000.json  spectrum_radial__sweep__96000.json  (+51 more)
tests/golden/inputs/: burst-48000.f32  burst-96000.f32  chord-48000.f32  chord-96000.f32  sine-48000.f32  sine-96000.f32  sweep-192000.f32  sweep-384000.f32  sweep-48000.f32  sweep-96000.f32
tests/golden/kits/: kitaudio-chain__sweep__48000.json  kitaudio-chain__sweep__48000.out.f32  kitaudio-chandelay__sweep__48000.json  kitaudio-chandelay__sweep__48000.out.f32  kitaudio-chandelay__sweep__96000.json  kitaudio-chandelay__sweep__96000.out.f32  kitaudio-matrix__sweep__48000.json  kitaudio-matrix__sweep__48000.out.f32  kitaudio-midside__sweep__48000.json  kitaudio-midside__sweep__48000.out.f32  kitaudio-ringmod__sweep__48000.json  kitaudio-ringmod__sweep__48000.out.f32  kitaudio-rotate__sweep__48000.json  kitaudio-rotate__sweep__48000.out.f32  kitaudio-rotate__sweep__96000.json  kitaudio-rotate__sweep__96000.out.f32  kitaudio-starter-haunt__sine__48000.json  kitaudio-starter-haunt__sine__48000.out.f32  kitaudio-starter-heartbeat__sine__48000.json  kitaudio-starter-heartbeat__sine__48000.out.f32  kitaudio-starter-orbit__sine__48000.json  kitaudio-starter-orbit__sine__48000.out.f32  kitaudio-wobble__sweep__48000.json  kitaudio-wobble__sweep__48000.out.f32
tests/golden/native-v3/: manifest.json
tests/receipts/: menu-behavior.sh  mini-furniture.sh  w1-geometry.sh  w2-wm-geometry.sh
tests/vacuum/: gate.sh
(+33 files in other folders)
