# Phosphor v4 workspace — one engine, no fallbacks. The Python tree
# and v3's core/ cdylib are gone (the 4.0.0 purge); tests/golden holds
# their frozen ground truth (docs/dev/GOLDEN.md).

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "4.7.2"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/RamenFast/phosphor"

# Central version table; member crates opt in with `dep.workspace = true`
# as their wave lands. Do not sprinkle stray versions in member manifests.
[workspace.dependencies]
phosphor-proto = { path = "crates/phosphor-proto" }
phosphor-dsp = { path = "crates/phosphor-dsp" }
phosphor-beam = { path = "crates/phosphor-beam" }
phosphor-audio = { path = "crates/phosphor-audio" }
serde = { version = "1", features = ["derive"] }
# preserve_order: .phos headers must repack in their original key order
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
rustfft = "6"
rayon = "1"
wide = "0.7"
# 27, not 28: egui-wgpu 0.33 links wgpu 27 — the egui glue defines the
# compatible set (egui 0.33 ↔ wgpu 27 ↔ winit 0.30); bump all together
wgpu = "27"
winit = "0.30"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
# v0_3_65 = the crate's highest API gate; Ben's server is 1.0.5 so all
# gates are satisfied (TARGET_OBJECT for app capture needs v0_3_44+)
pipewire = { version = "0.9", features = ["v0_3_65"] }
symphonia = { version = "0.5", features = ["all"] }
# arbitrary-ratio SRC for playback: decode rate → scope pipe rate
# (the audible path and the scope share ONE resampled stream, so the
# picture stays sample-locked to the sound — v3's ffmpeg-rate law)
rubato = "0.16"
# native file-open dialog (v3 used GtkFileChooserNative; rfd talks to the portal)
rfd = "0.15"
# snapshot PNG writer (pure rust)
png = "0.18"
zbus = "5"
proptest = "1"
pollster = "0.4"

[profile.release]
# thin LTO while the wave is under construction (build-time sanity);
# revisit fat LTO + codegen-units=1 (core/'s discipline) at the perf
# polish pass — bench gates always run --release either way.
lto = "thin"

[profile.bench-gate]
# the profile the 2× gate is measured under: core/'s full discipline
inherits = "release"
lto = "fat"
codegen-units = 1
