[package]
name = "phosphor-app"
description = "The phosphor binary: subcommand-first CLI; render + bench land in wave 1, the egui shell in wave 2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "phosphor"
path = "src/main.rs"

[dependencies]
phosphor-proto.workspace = true
phosphor-dsp.workspace = true
phosphor-beam.workspace = true
phosphor-audio.workspace = true
phosphor-render-cpu = { path = "../phosphor-render-cpu" }
phosphor-render-gpu = { path = "../phosphor-render-gpu" }
serde_json.workspace = true
sha2.workspace = true
# the shell (wave 2): promoted from the wave-1 spike surface
wgpu.workspace = true
winit.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
pollster.workspace = true
rfd.workspace = true
