[package]
name = "phosphor-app"
description = "CRT-style XY oscilloscope for desktop audio — one Rust engine, GPU beam, native PipeWire"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# `packaging/build-rpm.sh` drives cargo-generate-rpm with this table
# (the .deb has its own script; the two stay content-identical).
[package.metadata.generate-rpm]
name = "phosphor"
summary = "CRT-style XY oscilloscope for desktop audio"
assets = [
  { source = "../../target/release/phosphor", dest = "/usr/bin/phosphor", mode = "755" },
  { source = "../../kits/haunt.phoskit", dest = "/usr/share/phosphor/kits/haunt.phoskit", mode = "644" },
  { source = "../../kits/heartbeat.phoskit", dest = "/usr/share/phosphor/kits/heartbeat.phoskit", mode = "644" },
  { source = "../../kits/orbit.phoskit", dest = "/usr/share/phosphor/kits/orbit.phoskit", mode = "644" },
  { source = "../../packaging/phosphor4-scope.svg", dest = "/usr/share/icons/hicolor/scalable/apps/phosphor-scope.svg", mode = "644" },
  { source = "../../packaging/phosphor4-scope-256.png", dest = "/usr/share/icons/hicolor/256x256/apps/phosphor-scope.png", mode = "644" },
  { source = "../../packaging/phosphor.desktop", dest = "/usr/share/applications/phosphor.desktop", mode = "644" },
  { source = "../../LICENSE", dest = "/usr/share/doc/phosphor/copyright", mode = "644" },
  { source = "../../target/rpm-stage/phosphor.1.gz", dest = "/usr/share/man/man1/phosphor.1.gz", mode = "644" },
]
[package.metadata.generate-rpm.requires]
ffmpeg = "*"

[[bin]]
name = "phosphor"
path = "src/main.rs"

[dependencies]
phosphor-proto.workspace = true
phosphor-dsp.workspace = true
phosphor-beam.workspace = true
phosphor-audio.workspace = true
phosphor-render-cpu = { path = "../phosphor-render-cpu" }
phosphor-render-gpu = { path = "../phosphor-render-gpu" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
# the shell (wave 2): promoted from the wave-1 spike surface
wgpu.workspace = true
winit.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
pollster.workspace = true
rfd.workspace = true
png.workspace = true
# cover-art decode (png+jpeg only — no default codecs)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
zbus.workspace = true
egui-phosphor = "0.11"
