[package]
name = "phosphor-dsp"
description = "samples -> segments: all 11 scope modes, kit chain, windowed-sinc oversampling, autocorrelation tau, compose resampler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
phosphor-proto.workspace = true
rustfft.workspace = true

[dev-dependencies]
proptest.workspace = true
