[package]
name = "phosphor-proto"
description = "Formats as contracts: .phos (fixed 256-byte header), .phoskit, scene/timeline JSON, tap/probe types, shipped JSON schemas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
sha2.workspace = true
