[package]
name = "phosphor-studio"
description = "EXPERIMENTAL stub — scene compiler + timeline tier returns after 4.0 (issue #1): build, beat grid, morphs, wireframe3d, Hershey vector font, camera automation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# stub crate — never publish until the studio tier actually returns
publish = false

[dependencies]
phosphor-proto.workspace = true
